# abomonation

./: .travis.yml  Cargo.toml  README.md  aliases.js  build.rs  index.html  search-index.js  settings.html  source-files.js
abomonation/: all.html  fn.decode.html  fn.encode.html  fn.measure.html  index.html  macro.unsafe_abomonate!.html  macro.unsafe_abomonate.html  sidebar-items.js  trait.Abomonation.html
abomonation/abomonated/: index.html  sidebar-items.js  struct.Abomonated.html
benches/: bench.rs  clone.rs  recycler.rs  serde.rs
implementors/abomonation/: trait.Abomonation.js
implementors/core/marker/: trait.Send.js  trait.Sync.js
implementors/core/ops/deref/: trait.Deref.js
src/: abomonable_smallvec.rs  abomonated.rs  lib.rs  size.rs
src/abomonation/: abomonated.rs.html  lib.rs.html
src/align/: alloc.rs  io.rs  mod.rs
tests/: tests.rs
