[package]
name = "abomonation"
version = "0.7.3"
authors = ["Frank McSherry <fmcsherry@me.com>"]

description = "A high performance and very unsafe serialization library"

# These URLs point to more information about the repository
documentation = "https://docs.rs/abomonation/"
homepage = "https://github.com/TimelyDataflow/abomonation"
repository = "https://github.com/TimelyDataflow/abomonation.git"
keywords = ["abomonation"]
license = "MIT"

[dependencies]
genio = { version = "0.2.1", optional = true }

[dev-dependencies]
recycler="0.1.4"

[features]
no_std = ["genio"]