[package]
name = "abomonation"
version = "0.7.3"
authors = ["Frank McSherry <fmcsherry@me.com>"]

description = "A high performance and very unsafe serialization library"

# These URLs point to more information about the repository
documentation = "https://docs.rs/abomonation/"
homepage = "https://github.com/TimelyDataflow/abomonation"
repository = "https://github.com/TimelyDataflow/abomonation.git"
keywords = ["abomonation"]
license = "MIT"

[features]
smallvec = ["dep:smallvec"]

[dependencies]
smallvec = { version = "1.7", optional = true }

[dev-dependencies]
recycler="0.1.4"
